# trackR

./: .gitignore  App.axaml  App.axaml.cs  LICENSE  Program.cs  README.md  ViewLocator.cs  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tailwind.config.js  tox.ini  trackR.csproj  trackR.sln
.github/workflows/: coverage_experiment.yml  tox.yml
Models/: DbEntry.cs
Services/: Database.cs
ViewModels/: MainWindowViewModel.cs  PlottingViewModel.cs  ViewModelBase.cs
Views/: MainWindow.axaml  MainWindow.axaml.cs
app/: root.tsx
app/routes/: index.tsx  login.tsx
app/styles/: tailwind.css
src/trckr/: __init__.py  __meta__.py  database.py  plotting.py
src/trckr/database/: __init__.py  chart.py  database.py  table.py
src/trckr/web/: __init__.py
src/web/: index.html
tests/: conftest.py  test_database.py  test_plotting.py  test_table.py
tests/data/: test_plotting
