[metadata]
name = trckr
description =
version = attr: trckr.__version__
author = citharus
license = MIT
license_file = LICENSE
url = https://github.com/citharus/trckr
project_urls =
    Bug Tracker = https://github.com/citharus/trckr/issues

[options]
zip_safe = False
packages = find:
package_dir = =src

[options.packages.find]
where = src
