[metadata]
name = trckr
description =
version = attr: trckr.__version__
author = citharus
license = MIT
license_file = LICENSE
url = https://github.com/citharus/trckr
project_urls =
    Bug Tracker = https://github.com/citharus/trckr/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
python_requires = >= 3.8
setup_requires = setuptools
install_requires =
    fastapi
    bson
packages = find:
package_dir = =src

[options.extras_require]
testing =
    pytest
    pytest-cov
    tox
    flake8

[options.packages.find]
where = src
